--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 </td>
 	<td>
 	<div class="container">
-  	<img src="HW5Document.png" alt="Business Canvas" class="image" width="300" height="300">
+  	<img src="HW5Document.PNG" alt="Business Canvas" class="image" width="300" height="300">
   	<a href="documents.html">
   	<div class="overlay">
     <div class="text">Documents</div>
