--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@ function hideShow5() {
 <button onclick="hideShow2()"> Photo (click to hide)</button>
 
 <div id="PrototypeDesigner">
-<img src="PrototypeDesigner.png" alt="AER Team Photo"></div>
+<img src="PrototypeDesigner.PNG" alt="AER Team Photo"></div>
 
 <p> As Team AER's prototype developer, Danessa analyzed the risk and failure modes of the device.  She made sure that the project adhered to FDA guidelines and general course outlines for the project.  She also compiled several reports and edited them to ensure that these reports and presentations were designed with high quality.</p> 
 
@@ -122,7 +122,7 @@ function hideShow5() {
 <button onclick="hideShow4()"> Photo (click to hide)</button>
 
 <div id="HirschbergLab">
-<img src="HirschbergLab.png" alt="Henry Hirschberg's MDP Project Listing"></div>
+<img src="HirschbergLab.PNG" alt="Henry Hirschberg's MDP Project Listing"></div>
 
 <p> As a member of the Henry Hirschberg Lab at Beckman Laser Institute, Danessa has worked on testing drug delivery vectors using macrophages.  She subcultured F98 rat tumor cells and performed laser treatments on each plate using gold nanoparticles inserted into each tumor spheroid.  She also worked on the SURP summer project "Sonochemical Internalization Project", creating a mechanical setup for monitoring tumor spheroids under sonochemical ultrasound treatment and plasmid-directed gene therapy.</p>
 
