--- a/solidworks.html
+++ b/solidworks.html
@@ -64,7 +64,7 @@
 			</tr>
 			<tr>
 				<td>2006</td>
-				<td><img src="Model Mania 2006.JPG" alt="Model Mania 2006" width="363" height="203"></td>
+				<td><img src="Model Mania 2006.jpg" alt="Model Mania 2006" width="363" height="203"></td>
 				<td><a href="2006 Phase 1.SLDPRT" download> Download </td>
 			</tr>
 		</table>
