--- a/about.html
+++ b/about.html
@@ -141,3 +141,8 @@ function hideShow5() {
 <li> <span> Secretary for Circle K Organization </span> </li>
 <li> <span> 3rd Place Winner of Poster Contest for UCI's Honors Transfer Conference (HTCC) </span> </li>
 </ul>
+<footer> Website Copyrighted © 2021 by Danessa Yip &nbsp;
+	<a href="mailto:dlyip@uci.edu" style="color: lightskyblue"> dlyip@uci.edu </a>
+</footer>
+</body>
+</html>
