--- a/contact.html
+++ b/contact.html
@@ -74,3 +74,8 @@
 	Connect on LinkedIn: </br> <a href="https://www.linkedin.com/in/danessa-yip/"> https://www.linkedin.com/in/danessa-yip/ </a>
 </h2>
 </body>
+<footer> Website Copyrighted © 2021 by Danessa Yip &nbsp;
+	<a href="mailto:dlyip@uci.edu" style="color: lightskyblue"> dlyip@uci.edu </a>
+</footer>
+</body>
+</html>
