--- a/documents.html
+++ b/documents.html
@@ -68,12 +68,16 @@
 <div class="hw2">
 <a id="CustomerInterview"> <h4> Customer Interviews </h4> </a>
   <p>
-    For this project, I conducted a survey with my team. <br />
-    We reported back our findings and performed a business <br /> 
-    analysis on it.  Here, our findings for our product are <br />
-    reflected.
+    For this project, I conducted a survey with my team. We reported <br />
+    back our findings and performed a business analysis on it.<br /> 
+    Here, our findings for our product are reflected.
   </p>
   <!-- Embed Homework 3 -->
   <p> This is the second report of the Winter Semester of 2020. </p>
   <embed src="HW2.pdf" width="960px" height="570px" />
 </div>
+<footer> Website Copyrighted © 2021 by Danessa Yip &nbsp;
+	<a href="mailto:dlyip@uci.edu" style="color: lightskyblue"> dlyip@uci.edu </a>
+</footer>
+</body>
+</html>
