--- a/presentations.html
+++ b/presentations.html
@@ -53,3 +53,9 @@
 	</p>
 	<!--Embed Video -->
 	<iframe width="560" height="315" src="https://www.youtube.com/embed/RAJej21zL6M" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+	<footer> Website Copyrighted © 2021 by Danessa Yip &nbsp;
+	<a href="mailto:dlyip@uci.edu" style="color: lightskyblue"> dlyip@uci.edu </a>
+</footer>
+</body>
+</html>
