--- a/projects.html
+++ b/projects.html
@@ -74,3 +74,8 @@
 
 <a href="http://aer.uci.design/"> <h3> Please see this link (also at the top)! </h3> </a>
 </div>
+<footer> Website Copyrighted © 2021 by Danessa Yip &nbsp;
+  <a href="mailto:dlyip@uci.edu" style="color: lightskyblue"> dlyip@uci.edu </a>
+</footer>
+</body>
+</html>
