--- a/solidworks.html
+++ b/solidworks.html
@@ -68,3 +68,8 @@
 				<td><a href="2006 Phase 1.SLDPRT" download> Download </td>
 			</tr>
 		</table>
+<footer> Website Copyrighted © 2021 by Danessa Yip &nbsp;
+	<a href="mailto:dlyip@uci.edu" style="color: lightskyblue"> dlyip@uci.edu </a>
+</footer>
+</body>
+</html>
