--- a/documents.html
+++ b/documents.html
@@ -25,6 +25,7 @@
       <a href="presentations.html">Presentations</a>
       <a href="documents.html">Documents</a>
       <a href="contact.html">Contact Me</a>
+      <a href="resume.html">Résumé</a>
 	</div>
 	<!--Three Bars Icon -->
 
