--- a/programming.html
+++ b/programming.html
@@ -26,6 +26,7 @@
       <a href="presentations.html">Presentations</a>
       <a href="documents.html">Documents</a>
       <a href="contact.html">Contact Me</a>
+      <a href="resume.html">Résumé</a>
     </div>
     <!--Three Bars Icon -->
 
@@ -118,3 +119,8 @@
             </table>
     </body>
         </html>
+<footer> Website Copyrighted © 2021 by Danessa Yip &nbsp;
+    <a href="mailto:dlyip@uci.edu" style="color: lightskyblue"> dlyip@uci.edu </a>
+</footer>
+</body>
+</html>
