--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" href="projects.css">
-	<title> Danessa's Models </title>
+	<title> Danessa's Résumé </title>
 	<link rel="shortcut icon" type ="Biomedical Engineering Favicon" href="favicon.png">
 </head>
 <header>
@@ -10,7 +10,7 @@
 		h1 {padding-top:30px;
 			font-size: 80px}
 	</style>
-	<h1> SolidWORKS Models </h1>
+	<h1> Résumé </h1>
 </header>
 <!--Three Bars-->
 	<div id="threebars" class="sidenav">
@@ -40,35 +40,19 @@
 		}
 	</script>
 	<!-- Three Bars End -->
-	<h2> Model Mania Challenges </h2>
-	<p> Here you can find my attempts at the Model Mania Challenges from Dassault Systèmes® <p>
-		<table style="width:100%">
-			<tr>
-				<th>Year</th>
-				<th>Image</th>
-				<th>Model</th>
-			</tr>
-			<tr>
-				<td>2014</td>
-				<td><img src="Model Mania 2014.JPG" alt="Model Mania 2014" width="286" height="285"></td>
-				<td><a href="2014 Phase 1.SLDPRT" download> Download </td>
-			</tr>
-			<tr>
-				<td>2015</td>
-				<td><img src="Model Mania 2015.JPG" alt="Model Mania 2015" width="272" height="258"></td>
-				<td><a href="2015 Phase 1.SLDPRT" download> Download </td>
-			</tr>
-			<tr>
-				<td>2005</td>
-				<td><img src="Model Mania 2005.JPG" alt="Model Mania 2005" width="353" height="168"></td>
-				<td><a href="2005 Phase 1.SLDPRT" download> Download </td>
-			</tr>
-			<tr>
-				<td>2006</td>
-				<td><img src="Model Mania 2006.jpg" alt="Model Mania 2006" width="363" height="203"></td>
-				<td><a href="2006 Phase 1.SLDPRT" download> Download </td>
-			</tr>
-		</table>
+	<body>
+<!--Final Report -->
+
+<div class="resume">
+<style>{
+	h4{padding:none; margin:none;}
+	p{padding:none; margin:none;}
+} </style>
+<h4> Résumé - Winter 2021 Update </h4>
+<p> This is my résumé, updated as of Winter 2021. </p>
+ <embed src="Danessa-Yip-Resume-Updated-Winter-2021.pdf" width="960px" height="1060px" />
+</div>
+  
 <footer> Website Copyrighted © 2021 by Danessa Yip &nbsp;
 	<a href="mailto:dlyip@uci.edu" style="color: lightskyblue"> dlyip@uci.edu </a>
 </footer>
