--- a/presentations.html
+++ b/presentations.html
@@ -21,6 +21,7 @@
       <a href="presentations.html">Presentations</a>
       <a href="documents.html">Documents</a>
       <a href="contact.html">Contact Me</a>
+      <a href="vault.html">Secret Vault</a>
 	</div>
 	<!--Three Bars Icon -->
 
