--- a/contact.html
+++ b/contact.html
@@ -22,6 +22,7 @@
       <a href="documents.html">Documents</a>
       <a href="contact.html">Contact Me</a>
       <a href="resume.html">Résumé</a>
+      <a href="vault.html">Secret Vault</a>
 	</div>
 	<!--Three Bars Icon -->
 
@@ -45,29 +46,11 @@
     	}
     </style>
 
-    <h2>Contact me</h2>
-    <p>Please fill in this form to leave a message for me.</p>
+    <h2>Contact me</h2> <br> <
+<a href="mailto:dlyip@uci.edu">
+<img src="ContactPicture.jpg" alt="Contact Me Picture with Link"> 
+</a>   
 
-    <form method="POST" action="mailto:dlyip@uci.edu">
-    <label for="fname"><b>First Name: </b></label>
-    <input type="text" placeholder="First Name" name="fname" id="fname" required> <br> <br>
-
-    <label for="fname"><b>Last Name: </b></label>
-    <input type="text" placeholder="Last Name" name="lname" id="lname" required> <br> <br>
-
-    <label for="email"><b>E-mail Address: </b></label>
-    <input type="text" placeholder="Email Address" name="email" id="email" required> <br> <br>
-
-    <label for="email"><b>Company or Organization: </b></label>
-    <input type="text" placeholder="Company or Organization" name="company" id="company"> <br> <br>
-
-    <label for="message">Message: </label>
-	<textarea id="message" name="message" rows="10" cols="70" required> Please type your inquiry here.
-	</textarea>
-
-	<p><input type="submit" value="Submit"/></p>
-
-  </form>
 <h4> Contact Info </h4>
 <h2>
 	Email Me: <a href="mailto:dlyip@uci.edu">dlyip@uci.edu</a></br>
