--- a/programming.html
+++ b/programming.html
@@ -27,6 +27,7 @@
       <a href="documents.html">Documents</a>
       <a href="contact.html">Contact Me</a>
       <a href="resume.html">Résumé</a>
+      <a href="vault.html">Secret Vault</a>
     </div>
     <!--Three Bars Icon -->
 
