--- a/projects.html
+++ b/projects.html
@@ -22,6 +22,7 @@
       <a href="documents.html">Documents</a>
       <a href="contact.html">Contact Me</a>
       <a href="resume.html">Résumé</a>
+      <a href="vault.html">Secret Vault</a>
 	</div>
 	<!--Three Bars Icon -->
 
