--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-  <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" href="projects.css">
@@ -26,6 +26,7 @@
       <a href="documents.html">Documents</a>
       <a href="contact.html">Contact Me</a>
       <a href="resume.html">Résumé</a>
+      <a href="vault.html">Secret Vault</a>
 	</div>
 	<!--Three Bars Icon -->
 
