--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     	}
     </style>
 
-    <h2>Contact me</h2> <br> <
+    <h2>Contact me</h2> <br>
 <a href="mailto:dlyip@uci.edu">
 <img src="ContactPicture.jpg" alt="Contact Me Picture with Link"> 
 </a>   
