--- a/contact.html
+++ b/contact.html
@@ -48,7 +48,7 @@
 
     <h2>Contact me</h2> <br>
 <a href="mailto:dlyip@uci.edu">
-<img src="ContactPicture.jpg" alt="Contact Me Picture with Link"> 
+<img src="ContactPicture.JPG" alt="Contact Me Picture with Link"> 
 </a>   
 
 <h4> Contact Info </h4>
